--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
   background-size: 100% auto;
   background-position: right bottom;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #launcher .row {
