--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ Max-Width Checkpoint 5 => 500px
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: Roboto;
+  font-size: 16px;
 }
 
 html {
@@ -32,6 +35,12 @@ html {
 
 body {
   min-height: 100%;
+
+  background-image: url(./assets/background.png);
+  background-size: 100% auto;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* 
@@ -39,16 +48,6 @@ body {
 02. Global Styles
 --------------------------------------------- 
 */
-.container {
-  width: 90%;
-  margin: auto;
-  min-height: 100vh;
-}
-
-.page-section {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-}
 
 .row {
   display: -webkit-box;
@@ -65,15 +64,6 @@ body {
 03. Launcher
 --------------------------------------------- 
 */
-
-.page-section#launcher {
-  background-image: url(./assets/background.png);
-  background-color: var(--secondaryBackgroundColor);
-  background-size: 100% auto;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
 
 #launcher .row {
   -ms-flex-wrap: wrap;
@@ -193,4 +183,103 @@ body {
     background-size: 1365px 678px;
     background-position: -864px 100%;
   }
+}
+
+/* --------------------------------------------- */
+
+#launcher-outer-container {
+  background-image: url("./design-assets/PNG/Phone.png");
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-color: transparent;
+
+  width: 480px;
+  height: 980px;
+  margin: auto;
+  padding: 22px;
+}
+
+#launcher-inner-container {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  overflow: hidden;
+}
+
+#launcher-inner-container #notification-bar {
+  height: 30px;
+  background-color: #8c1e15;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  color: white;
+  padding-right: 22px;
+}
+
+#launcher-inner-container #notification-bar #clock,
+#launcher-inner-container #notification-bar #battery {
+  padding-left: 8px;
+}
+
+#launcher-inner-container #notification-bar #reception {
+  padding-left: 2px;
+}
+
+#launcher-inner-container #logo-bar {
+  height: 38px;
+  background-color: #b22519;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: center;
+}
+
+#launcher-inner-container section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+#launcher-inner-container > section > a {
+  --default-border: 1px solid #cfd3d6;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: calc(100% / 3);
+  padding: 25px;
+
+  border-bottom: var(--default-border);
+  cursor: pointer;
+}
+
+#launcher-inner-container > section > a:nth-of-type(3n-1) {
+  border: 1px solid #cfd3d6;
+  border-top: none;
+}
+
+#launcher-inner-container > section > a:hover {
+  box-shadow: 0px 0px 5px 0px rgba(111, 111, 111, 0.3);
+}
+
+#launcher-inner-container > section > a.selected {
+  box-shadow: 0px 0px 8px 0px rgb(111 111 111 / 50%);
+}
+
+#launcher-inner-container > section > a img {
+  width: 60%;
+}
+
+#launcher-inner-container > section > a#superapp-logo img {
+  width: 80%;
+}
+#launcher-inner-container > section > a#club-logo img {
+  width: 45%;
+}
+#launcher-inner-container > section > a#systems-logo img {
+  width: 65%;
 }
