failed in using svg as a background. it seems that it doesn't allow <g> while being wrapped in <img/>

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body {
 /* --------------------------------------------- */
 
 #launcher-outer-container {
-  background-image: url("./design-assets/PNG/Phone.png");
+  background-image: url("./assets/Phone.png");
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-color: transparent;
