--- a/style.css
+++ b/style.css
@@ -155,3 +155,30 @@ body {
 #launcher-inner-container > section > a#systems-logo img {
   width: 65%;
 }
+
+@media (max-width: 500px) {
+  body {
+    display: initial;
+  }
+
+  #launcher-outer-container {
+    background-image: none;
+    background-color: transparent;
+
+    width: 100%;
+    height: 100%;
+
+    aspect-ratio: initial;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  #launcher-inner-container {
+    background-color: transparent;
+    border-radius: 0px;
+  }
+
+  #launcher-inner-container #notification-bar {
+    display: none;
+  }
+}
