--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ Max-Width Checkpoint 5 => 500px
   padding: 0;
   box-sizing: border-box;
 
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
+  font-weight: 400;
 }
 
 html {
@@ -179,11 +180,11 @@ body {
   justify-content: center;
 
   width: calc(100% / 3);
-  /* width: 100%; */
   padding: calc(var(--new-width) * 25 / 480);
 
   border-bottom: var(--default-border);
   cursor: pointer;
+  background-color: white;
 }
 
 #launcher-inner-container > nav > a:nth-of-type(3n-1) {
