--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ responsiveness ones.
 Max-Width Checkpoint => 500px
 --------------------------------------------- */
 
-/* TODO enhance code and use variables */
-
 /* 
 ---------------------------------------------
 01. Reset css
@@ -91,19 +89,23 @@ body {
 #loading-layer {
   position: fixed;
   top: 0;
-  right: 0;
   bottom: 0;
+  right: 0;
   left: 0;
+  /* height: 100vh; */
+  transition: top 2s, bottom 2s;
+  z-index: 999999;
+
   background-color: #b22519;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bottom 1.5s;
 }
 
 #loading-layer > img {
   max-width: 60%;
-  width: 150px;
+  width: 130px;
   opacity: 1;
   transition: opacity 1s;
 }
@@ -124,12 +126,10 @@ body {
   background-image: url("./assets/Phone.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-color: transparent;
 
   width: var(--new-width);
   height: 95vh;
 
-  aspect-ratio: var(--default-width) / var(--default-height);
   margin: auto;
   padding: calc(var(--new-width) * 22 / 480);
 }
@@ -150,12 +150,14 @@ body {
 
 #launcher-inner-container #notification-bar {
   min-height: 30px;
-  background-color: #8c1e15;
+  padding-right: calc(var(--new-width) * 22 / 480);
+
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+
+  background-color: #8c1e15;
   color: white;
-  padding-right: calc(var(--new-width) * 22 / 480);
 }
 
 #launcher-inner-container #notification-bar #clock,
@@ -168,12 +170,20 @@ body {
 }
 
 #launcher-inner-container #logo-bar {
-  min-height: 38px;
+  min-height: 40px;
+
   background-color: #b22519;
+
   display: flex;
-  flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
+
+  overflow: hidden;
+}
+
+#launcher-inner-container #logo-bar img {
+  margin-top: -100px;
+  transition: margin 500ms;
 }
 
 #launcher-inner-container > nav {
@@ -182,7 +192,6 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 
-  text-align: center;
   overflow-y: auto;
   padding-bottom: 5px;
 }
@@ -195,12 +204,16 @@ body {
   align-items: center;
   justify-content: center;
 
+  position: relative;
+
   width: calc(100% / 3);
-  padding: calc(var(--new-width) * 25 / 480);
+  padding: calc(var(--new-width) * 17 / 480);
 
   border-bottom: var(--default-border);
-  cursor: pointer;
   background-color: white;
+  cursor: pointer;
+
+  transition: box-shadow 250ms;
 }
 
 #launcher-inner-container > nav > a:nth-of-type(3n-1) {
@@ -210,25 +223,16 @@ body {
 
 #launcher-inner-container > nav > a:hover {
   box-shadow: 0px 0px 5px 0px rgba(111, 111, 111, 0.3);
+  z-index: 10;
 }
 
 #launcher-inner-container > nav > a.selected {
-  box-shadow: 0px 0px 10px 0px rgba(111, 111, 111, 0.3);
+  box-shadow: 0px 0px 10px 0px rgba(111, 111, 111, 0.4);
+  z-index: 20;
 }
 
 #launcher-inner-container > nav > a img {
-  width: 60%;
-}
-
-/* TODO it uses IDs! what if he added new logo to the launcher?! */
-#launcher-inner-container > nav > a#superapp-logo img {
   width: 80%;
-}
-#launcher-inner-container > nav > a#club-logo img {
-  width: 45%;
-}
-#launcher-inner-container > nav > a#systems-logo img {
-  width: 65%;
 }
 
 @media (max-width: 500px) {
@@ -239,7 +243,6 @@ body {
     width: 100%;
     height: 100%;
 
-    aspect-ratio: initial;
     margin: 0px;
     padding: 0px;
   }
