fix for the last problem of the padding !

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body {
 
 #launcher-inner-container #logo-bar {
   min-height: 40px;
-  padding-top: 2px
+  padding-top: 2px;
 
   background-color: #b22519;
 
