new small padding

--- a/style.css
+++ b/style.css
@@ -171,7 +171,6 @@ body {
 
 #launcher-inner-container #logo-bar {
   min-height: 40px;
-  padding-top: 2px;
 
   background-color: #b22519;
 
@@ -255,5 +254,9 @@ body {
 
   #launcher-inner-container #notification-bar {
     display: none;
+  }
+
+  #launcher-inner-container #logo-bar {
+    padding-top: 4px;
   }
 }
