--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body {
 }
 
 #launcher-inner-container {
-  --default-border-radius: 40;
+  --default-border-radius: 40px;
 
   background-color: white;
   width: 100%;
@@ -187,6 +187,9 @@ body {
 }
 
 #launcher-inner-container > nav {
+  --default-a-border: 1px solid #cfd3d6;
+  --default-a-padding: 17px;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -197,51 +200,30 @@ body {
 }
 
 #launcher-inner-container > nav > a {
-  --default-border: 1px solid #cfd3d6;
-  --default-a-padding: 25;
-
   display: flex;
   align-items: center;
   justify-content: center;
 
-  position: relative;
-
   width: calc(100% / 3);
   padding: calc(var(--new-width) * 17 / 480);
 
-  border-bottom: var(--default-border);
+  border-bottom: var(--default-a-border);
+  border-right: var(--default-a-border);
+
   background-color: white;
 
   transition: box-shadow 250ms;
 }
 
-#launcher-inner-container > nav > a:not(.disabled) {
+#launcher-inner-container > nav > a[href] {
   cursor: pointer;
 }
 
-#launcher-inner-container > nav > a:nth-of-type(3n-1) {
-  border: 1px solid #cfd3d6;
-  border-top: none;
-}
-
-#launcher-inner-container > nav > a:nth-of-type(3n-2):last-of-type {
+#launcher-inner-container > nav > a:nth-of-type(3n) {
   border-right: none;
-  position: relative;
 }
 
-#launcher-inner-container
-  > nav
-  > a:last-of-type:not(:nth-of-type(3n-1)):not(:nth-of-type(3n)):after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: calc(100%);
-  width: 0.5px;
-  background-color: #cfd3d6;
-  bottom: -1px;
-}
-
-#launcher-inner-container > nav > a:not(.disabled):hover {
+#launcher-inner-container > nav > a[href]:hover {
   box-shadow: 0px 0px 5px 0px rgba(111, 111, 111, 0.3);
   z-index: 10;
 }
@@ -255,7 +237,7 @@ body {
   width: 80%;
 }
 
-#launcher-inner-container > nav > a.disabled > svg path {
+#launcher-inner-container > nav > a:not([href]) > svg path {
   /* box-shadow: 0px 0px 10px 0px rgba(111, 111, 111, 0.4);
   z-index: 20; */
   fill: #9e9e9e;
